--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -859,7 +859,7 @@
     <string name="connect_deactivate_dialog_title">Are you sure?</string>
     <string name="connect_deactivate_dialog_description">You want to deactivate you account permanently?</string>
 
-    <string name="connect_new_opportunity">New Opportunity</string>
+    <string name="connect_new_opportunity">Nouvelle opportunité</string>
     <string name="connect_learn">Learn</string>
     <string name="connect_delivery">Delivery</string>
     <string name="connect_commcare_app">CommCare App</string>
