--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -859,4 +859,6 @@
     <string name="connect_deactivate_dialog_title">Are you sure?</string>
     <string name="connect_deactivate_dialog_description">You want to deactivate you account permanently?</string>
 
+    <string name="connect_job_tile_price">₹ %s</string>
+
 </resources>
