--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -303,7 +303,7 @@ License.
     <string name="connect_deactivate_dialog_title">Es-tu sûr?</string>
     <string name="connect_deactivate_dialog_description">Vous souhaitez désactiver votre compte définitivement ?</string>
 
-    <string name="connect_new_opportunity">New Opportunity</string>
+    <string name="connect_new_opportunity">Nouvelle opportunité</string>
     <string name="connect_learn">Apprendre</string>
     <string name="connect_delivery">Livraison</string>
     <string name="connect_commcare_app">Application CommCare</string>
