--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="ConnectPaymentConfirmationURL">https://%s/api/payment/%s/confirm</string>
     <string name="ConnectInitiateUserAccountDeactivationURL">https://connectid.dimagi.com/users/recover/initiate_deactivation</string>
     <string name="ConnectConfirmUserAccountDeactivationURL">https://connectid.dimagi.com/users/recover/confirm_deactivation</string>
+    <string name="ConnectConfirmUserInvitation">https://connectid.dimagi.com/settings/users/commcare/confirm_connectid_user</string>
 
     <!-- region: All strings for multiple apps and app-agnostic properties -->
 
