--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="ConnectPaymentConfirmationURL">https://%s/api/payment/%s/confirm</string>
     <string name="ConnectInitiateUserAccountDeactivationURL">https://connectid.dimagi.com/users/recover/initiate_deactivation</string>
     <string name="ConnectConfirmUserAccountDeactivationURL">https://connectid.dimagi.com/users/recover/confirm_deactivation</string>
+    <string name="ConnectPaymentPhoneNumberURL">https://connectid.dimagi.com/users/profile/payment_phone_number</string>
+    <string name="ConnectConfirmPaymentOtpURL">https://connectid.dimagi.com/users/profile/confirm_payment_otp</string>
 
     <!-- region: All strings for multiple apps and app-agnostic properties -->
 
@@ -868,5 +870,6 @@
     <string name="connect_job_tile_price">₹ %s</string>
     <string name="connect_job_tile_daily_limit_description">Daily Limit reached. No Payment for submitting forms</string>
     <string name="connect_job_tile_daily_limit">Over Limit</string>
+    <string name="connect_payment_info">Payment Info</string>
 
 </resources>
