--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -307,4 +307,8 @@ License.
     <string name="connect_learn">Apprendre</string>
     <string name="connect_delivery">Livraison</string>
     <string name="connect_commcare_app">Application CommCare</string>
+    <string name="connect_appbar_title_opportunity">Opportunité</string>
+    <string name="connect_appbar_title_learning_progress">Progrès de l\'apprentissage</string>
+    <string name="connect_appbar_title_delivery">Livraison</string>
+    <string name="connect_appbar_title_opportunity_detail">Détails de l\'opportunité</string>
 </resources>
