--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -307,4 +307,6 @@ License.
     <string name="connect_learn">Apprendre</string>
     <string name="connect_delivery">Livraison</string>
     <string name="connect_commcare_app">Application CommCare</string>
+    <string name="connect_appbar_title_app_lock">Verrouillage d\'application</string>
+    <string name="connect_appbar_title_password_verification">Vérification du mot de passe</string>
 </resources>
