Update update invitation logic
Update update invitation logic

--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -481,4 +481,8 @@
     <string name="connect_learn">Aprender</string>
     <string name="connect_delivery">Entrega</string>
     <string name="connect_commcare_app">Aplicativo CommCare</string>
+
+    <string name="connect_hq_invitation_heading">Está convidado para o domínio do projeto CommCareHQ como %s</string>
+    <string name="connect_hq_invitation_accept">Aceitar</string>
+    <string name="connect_hq_invitation_denied">Negado</string>
 </resources>
