--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -307,4 +307,8 @@ License.
     <string name="connect_learn">Apprendre</string>
     <string name="connect_delivery">Livraison</string>
     <string name="connect_commcare_app">Application CommCare</string>
+
+    <string name="connect_hq_invitation_heading">Vous êtes invité au domaine du projet CommCareHQ en tant que %s</string>
+    <string name="connect_hq_invitation_accept">Accepter</string>
+    <string name="connect_hq_invitation_denied">Refusé</string>
 </resources>
