--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -441,7 +441,7 @@
     <string name="connect_verify_phone_label_secondary">Tentámos enviar-lhe um código no seu número de telefone secundário.</string>
     <string name="connect_verify_phone_resend">Não recebeu o seu código? Reenviar</string>
     <string name="connect_verify_phone_resend_wait">Não recebeu o seu código? Reenviar em %d s</string>
-    <string name="connect_verify_phone_change">Alterar número de telefone</string>
+    <string name="connect_verify_phone_change">mudar</string>
     <string name="connect_verify_phone_verify">Verificar código</string>
     <string name="connect_last_update">Atualizado: %s</string>
     <string name="connect_title">Ligar</string>
@@ -521,7 +521,7 @@
     <string name="connect_job_list_api_failure">Ocorreu um erro ao ligar ao servidor.</string>
     <string name="connect_payment_acknowledge_notification_yes">Sim</string>
     <string name="connect_payment_acknowledge_notification_no">Não</string>
-    <string name="enter_otp">Digite o código SMS</string>
+    <string name="enter_otp">Digite OTP</string>
     <string name="change">Mudar</string>
     <string name="create_a_new_recovery_code">Crie um novo código de recuperação</string>
     <string name="confirm_code">Confirmar código</string>
