--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -865,7 +865,7 @@
     <string name="connect_delivery">Delivery</string>
     <string name="connect_expired">Expired</string>
     <string name="connect_commcare_app">CommCare App</string>
-    <string name="connect_job_tile_price">₹ %s</string>
+    <string name="connect_job_tile_price">%s</string>
     <string name="connect_job_tile_daily_limit_description">Daily Limit reached. No Payment for submitting forms</string>
     <string name="connect_job_tile_daily_limit">Over Limit</string>
 
