--- a/app/res/values-ti/strings.xml
+++ b/app/res/values-ti/strings.xml
@@ -554,4 +554,8 @@
     <string name="connect_job_tile_price">₹ %s</string>
     <string name="connect_job_tile_daily_limit_description">መዓልታዊ ገደብ በጺሑ። ቅጥዕታት ንምቕራብ ክፍሊት የለን</string>
     <string name="connect_job_tile_daily_limit">ልዕሊ (ገደብ) ደረት</string>
+    <string name="connect_messaging_channel_consent_title">ፍቓድ ንቻነል ሃብ</string>
+    <string name="connect_messaging_channel_consent_description">ኣብዚ ቻነል ናይ መልእኽቲ ፈትሊ ክትከፍቱ ትሰማምዑ ዶ?</string>
+    <string name="connect_messaging_channel_consent_accept">ተቀበል</string>
+    <string name="connect_messaging_channel_consent_decline">ኣውድቅ</string>
 </resources>
