--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -579,6 +579,7 @@
     <string name="connect_verify_phone_label">We attempted to send you a SMS ending with %s.</string>
     <string name="connect_verify_phone_label_secondary">We attempted to send you a SMS on your secondary phone number.</string>
     <string name="connect_verify_phone_label_alternate">Almost there! Please enter the code sent via SMS to your alternate phone%s.</string>
+    <string name="connect_verify_phone_label_deactivate">In order to deactivate your account, please enter the code sent by SMS to your primary phone number.</string>
     <string name="connect_verify_phone_resend">Didn\'t receive your code? Resend</string>
 
     <string name="connect_verify_phone_resend_wait">Didn\'t receive your code? Resend in %d s</string>
@@ -853,8 +854,8 @@
     <string name="connect_payment_revert">Revert</string>
 
     <string name="connect_deactivate_account">Deactivate Account</string>
-    <string name="connect_deactivate_account_message">You are about to permanently deactivate this account…</string>
-    <string name="connect_deactivate_account_delete">Delete Account</string>
+    <string name="connect_deactivate_account_message">Are you sure you want to permanently deactivate this account? Once finished, you will need to register a new account for this phone number.</string>
+    <string name="connect_deactivate_account_delete">Deactivate Account</string>
     <string name="connect_deactivate_account_go_back">Go Back</string>
     <string name="connect_deactivate_account_deactivated">Account deactivated, you may now register a new account with your primary phone number</string>
     <string name="connect_deactivate_account_creation">Ok</string>
