UI improvements on Recovery Code page.

--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -383,12 +383,14 @@
     <string name="connect_phone_not_found">Número de telefone não encontrado</string>
     <string name="connect_phone_change_error">Erro ao alterar o número de telefone</string>
     <string name="connect_password_button">OK</string>
-    <string name="connect_pin_title_set">Escolha o PIN</string>
-    <string name="connect_pin_title_confirm">Confirmar PIN</string>
-    <string name="connect_pin">Insira o PIN</string>
-    <string name="connect_pin_repeat">Confirmar PIN</string>
-    <string name="connect_pin_length">O PIN deve ser %d dígitos</string>
-    <string name="connect_pin_mismatch">Os PINs devem corresponder</string>
+    <string name="connect_pin_title_set">Código de recuperação</string>
+    <string name="connect_pin_title_confirm">Confirmar código de recuperação</string>
+    <string name="connect_pin_message_title">Código de recuperação ConnectID</string>
+    <string name="connect_pin_message">Digite seu código de recuperação de 6 dígitos</string>
+    <string name="connect_pin">Digite o código de recuperação</string>
+    <string name="connect_pin_repeat">Confirmar código de recuperação</string>
+    <string name="connect_pin_length">O código deve ser %d dígitos</string>
+    <string name="connect_pin_mismatch">Os códigos devem corresponder</string>
     <string name="connect_password_verify_title">Introduza a sua palavra-passe</string>
     <string name="connect_password_verify_message">Introduza a sua palavra-passe de recuperação para continuar.</string>
     <string name="connect_password_verify">Introduza a palavra-passe</string>
@@ -402,7 +404,7 @@
     <string name="connect_pin_fail_message">Introduziu o PIN errado, tente novamente.</string>
     <string name="connect_pin_recovery_message">Introduziu o PIN errado demasiadas vezes, terá de recuperar a sua conta.n No ecrã seguinte, enviaremos um código via SMS para o número de telefone alternativo associado à sua conta.</string>
     <string name="connect_pin_confirm_message">Você inseriu o PIN errado muitas vezes, você terá que configurar o pino novamente.n Na próxima tela, redirecionaremos você para a página de configuração do pin</string>
-    <string name="connect_pin_verify_forgot">Não tem ou esqueceu o seu PIN?</string>
+    <string name="connect_pin_verify_forgot">Esqueci o código</string>
     <string name="connect_recovery_title">Configuração do ConnectID</string>
     <string name="connect_recovery_alt_title">Telefone alternativo</string>
     <string name="connect_recovery_alt_message">Na próxima tela, nós \'ll enviar um código via SMS para o número de telefone alternativo associado com sua conta.</string>
