--- a/app/res/values-ti/strings.xml
+++ b/app/res/values-ti/strings.xml
@@ -371,12 +371,14 @@
     <string name="connect_phone_not_found">ቁጽሪ ስልኪ ሞባይል ኣይተረኽበን።</string>
     <string name="connect_phone_change_error">ቁጽሪ ስልኪ ቁፅሪ ሞባይል ኣብ ምቕያር ጌጋ</string>
     <string name="connect_password_button">እሺ</string>
-    <string name="connect_pin_title_set">PIN/ፒን ምረጽ</string>
-    <string name="connect_pin_title_confirm">PIN/ፒን ኣረጋግጽ</string>
-    <string name="connect_pin">PIN/ፒን ኣእቱ</string>
-    <string name="connect_pin_repeat">PIN/ፒን ኣረጋግጽ</string>
-    <string name="connect_pin_length">ኮድ %d ኣሃዛት ክኸውን ኣለዎ።</string>
-    <string name="connect_pin_mismatch">PIN/ፒን ክሰማማዕ/ክዛመድ ኣለዎ።</string>
+    <string name="connect_pin_title_set">ናይ ምሕዋይ ሕጊ</string>
+    <string name="connect_pin_title_confirm">ናይ ምሕዋይ ኮድ ኣረጋግጽ</string>
+    <string name="connect_pin_message_title">ConnectID ናይ ምሕዋይ ኮድ</string>
+    <string name="connect_pin_message">6 ኣሃዝ ዘለዎ ናይ ምሕዋይ ኮድካ ኣእቱ</string>
+    <string name="connect_pin">ናይ ምሕዋይ ኮድ ኣእትዉ</string>
+    <string name="connect_pin_repeat">ናይ ምሕዋይ ኮድ ኣረጋግጽ</string>
+    <string name="connect_pin_length">ኮድ %d ኣሃዝ ክኸውን ኣለዎ።</string>
+    <string name="connect_pin_mismatch">ኮዳት ክሰማምዑ ኣለዎም።</string>
     <string name="connect_password_verify_title">ናይ ይሕለፍ ቃል/ ፓስዎርድ ኣእቱ</string>
     <string name="connect_password_verify_message">በይዛኩም ናብ ንቡር ንምምላስ ንኽትቅፅሉ ናይ ይሕለፍ ቃል/ ፓስዎርድካ ኣእትዉ።</string>
     <string name="connect_password_verify">ናይ ይሕለፍ ቃል/ ፓስዎርድ ኣእቱ</string>
@@ -390,7 +392,7 @@
     <string name="connect_pin_fail_message">ጌጋ ኮድ ኣእቲኻ፤ በይዛኻ ደጊምካ ፈትን።</string>
     <string name="connect_pin_recovery_message">ጌጋ ኮድ ብዙሕ ግዜ ኣእቲኻ፡ ኣካውንትካ ናብ ንቡር ኩነታት ክትመልስ ከድልየካ እዩ።\n ኣብ ዝቕጽል ስክሪን፤ ብኤስኤምኤስ/ ብመልእክቲ ፅሑፍ ናብቲ ምስ ኣካውንትካ ዝተኣሳሰር ኣማራጺ ቁጽሪ ስልኪ ሞባይል ኮድ ክንሰድድ ኢና።</string>
     <string name="connect_pin_confirm_message">ጌጋ ኮድ ብዙሕ ግዜ ኣእቲኻ፡ ነቲ ኮድ እንደገና ክተስተካክሎ ክትግደድ ኢኻ።\n ኣብ ዝቕጽል ስክሪን፡ ናብቲ ናይ መስተካከሊ ኮድ ገጽ ክንመርሐካ ኢና።</string>
-    <string name="connect_pin_verify_forgot">ኮድካ የብልካን ወይ ረሲዕካዮ?</string>
+    <string name="connect_pin_verify_forgot">ኮድ ረሲዐዮ</string>
     <string name="connect_recovery_title">ConnectID ናብ ንቡር ምምላስ</string>
     <string name="connect_recovery_alt_title">ኣማራፂ ስልኪ</string>
     <string name="connect_recovery_alt_message">ኣብ ዝቕጽል ስክሪን፤ ብኤስኤምኤስ/ ብመልእክቲ ፅሑፍ ናብቲ ምስ ኣካውንትኩም ዝተኣሳሰር ኣማራጺ ቁጽሪ ስልኪ ሞባይል ኮድ ክንሰድድ ኢና።</string>
