--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -477,20 +477,19 @@
     <string name="connect_password_mismatch">Passwords must match</string>
     <string name="connect_password_weak">Please choose a stronger password</string>
     <string name="connect_password_error">Error changing password</string>
-    <string name="connect_pin_title_set">Choose PIN</string>
-    <string name="connect_pin_title_confirm">Confirm PIN</string>
-    <string name="connect_pin_message_set">Please choose a 6-digit PIN for account recovery</string>
 
-    <string name="connect_pin_message_repeat">Please enter the recovery PIN that you previously entered</string>
-    <string name="connect_pin_message_confirm">Please enter your recovery PIN</string>
-    <string name="connect_pin">Enter PIN</string>
-    <string name="connect_pin_repeat">Confirm PIN</string>
+    <string name="connect_pin_title_set">Recovery Code</string>
+    <string name="connect_pin_title_confirm">Confirm Recovery Code</string>
+    <string name="connect_pin_message_title">ConnectID Recovery Code</string>
+    <string name="connect_pin_message">Enter your 6-digit Recovery Code</string>
+    <string name="connect_pin">Enter Recovery Code</string>
+    <string name="connect_pin_repeat">Confirm Recovery Code</string>
     <string name="connect_pin_length">Code must be %d digits</string>
-    <string name="connect_pin_mismatch">PINs must match</string>
+    <string name="connect_pin_mismatch">Codes must match</string>
+
     <string name="connect_password_verify_title">Enter Your Password</string>
     <string name="connect_password_verify_message">Please enter your recovery password to continue.</string>
     <string name="connect_password_verify">Enter Password</string>
-
     <string name="connect_password_verify_forgot">Don\'t have or forgot your password?</string>
     <string name="connect_password_verify_button">Submit</string>
     <string name="connect_password_fail_title">Wrong Password</string>
@@ -502,10 +501,12 @@
     <string name="connect_pin_recovery_message">You entered the wrong Code too many times, you will need to recover your account.\n On the next screen, we\'ll send a code via SMS to the alternate phone number associated with your account.</string>
 
     <string name="connect_pin_confirm_message">You entered the wrong Code too many times, you will have to configure the code again.\n On the next screen, we\'ll redirect you to the configure code page.</string>
-    <string name="connect_pin_verify_forgot">Don\'t have or forgot your Code?</string>
     <string name="connect_pin_fail_button">OK</string>
+    <string name="connect_pin_verify_forgot">Forgot Code</string>
     <string name="connect_recovery_title">ConnectID Recovery</string>
     <string name="connect_recovery_title2">Identify Existing Account</string>
+
+
 
     <string name="connect_recovery_decision_new">Choose a step below</string>
     <string name="connect_recovery_button_new">Create New ConnectID Account</string>
