--- a/app/res/values-ti/strings.xml
+++ b/app/res/values-ti/strings.xml
@@ -525,7 +525,7 @@
     <string name="connect_job_info_review_delivery">ዝርዝር ኣወሃህባ ዳህሳስ ከልስ</string>
     <string name="connect_job_info_visit">%d ዝለዓለ ምብጻሕ</string>
     <string name="connect_job_info_days">%d መዓልታት ንምዝዛም</string>
-    <string name="connect_job_info_max_visit">ዝለዓለ ምጉብናይ ኣብ መዓልቲ %መ</string>
+    <string name="connect_job_info_max_visit">ዝለዓለ ምጉብናይ ኣብ መዓልቲ %d</string>
     <string name="connect_job_info_visit_charge">ንምጉብናይ ክሳብ %s ኣታዊ ምርካብ</string>
     <string name="connect_job_info_start_visit">ምብጻሕ (ምጉብንይ) ጀምር</string>
     <string name="connect_job_info_download_delivery">ዳውንሎድ ምብፃሕ</string>
