--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -485,4 +485,7 @@
     <string name="connect_hq_invitation_heading">Está convidado para o domínio do projeto CommCareHQ como %s</string>
     <string name="connect_hq_invitation_accept">Aceitar</string>
     <string name="connect_hq_invitation_denied">Negado</string>
+    <string name="connect_hq_invitation_go_to_recovery">Vá para a recuperação</string>
+    <string name="connect_hq_invitation_connectId_not_configure">Não configurou o seu ConnectID. Para aceitar este convite, configure primeiro o seu ConnectID. Depois de configurado, poderá aceitar o convite.</string>
+    <string name="connect_hq_invitation_wrong_user">Ops! Parece que o convite foi enviado para a pessoa errada.</string>
 </resources>
