--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -183,7 +183,7 @@
     <string name="replace_location">Verificar a Localização</string>
     <string name="replace_video">Verificar o Vídeo</string>
     <string name="required_answer_error">Desculpe, esta resposta é obrigatória!</string>
-    <string name="review">continue</string>
+    <string name="review">Continuar</string>
     <string name="review_data">Editar Formulário Salvo</string>
     <string name="review_data_button">Editar Formulário Salvo</string>
     <string name="saved_data">Incompleto (%s)</string>
@@ -442,6 +442,8 @@
     <string name="connect_verify_phone_label">Tentámos enviar-lhe um código no número que termina em %s.</string>
     <string name="connect_verify_phone_label_secondary">Tentámos enviar-lhe um código no seu número de telefone secundário.</string>
     <string name="connect_verify_phone_resend">Não recebeu o seu código? Reenviar</string>
+    <string name="connect_verify_phone_error">Erro ao verificar o código SMS</string>
+    <string name="connect_verify_phone_resend_code">Reenviar código</string>
     <string name="connect_verify_phone_resend_wait">Não recebeu o seu código? Reenviar em %d s</string>
     <string name="connect_verify_phone_change">mudar</string>
     <string name="connect_verify_phone_verify">Verificar código</string>
@@ -450,6 +452,7 @@
     <string name="connect_no_jobs">Você não foi convidado para nenhuma oportunidade ativa. Por favor, volte mais tarde.</string>
     <string name="connect_job_intro_title">Oportunidade</string>
     <string name="connect_job_none_available">Não há oportunidades disponíveis no momento</string>
+    <string name="connect_job_learn_details">Detalhes da Aprendizagem</string>
     <string name="connect_job_you_will_learn">Complete os seguintes módulos de aprendizagem e ganhe um certificado</string>
     <string name="connect_job_no_learning_required">Não é necessário aprender</string>
     <string name="connect_job_go_to_learn_app">Ir para a aplicação Learn</string>
@@ -539,6 +542,9 @@
     <string name="connect_job_info_days">%d dias para concluir</string>
     <string name="connect_job_info_max_visit">Máximo de visitas por dia %d</string>
     <string name="connect_job_info_visit_charge">Ganhe até %s por visita</string>
+    <string name="connect_job_info_per_visit">por visita</string>
+    <string name="connect_job_info_delivery_hours">Horário de entrega</string>
+    <string name="connect_job_info_view_more">Ver mais</string>
     <string name="connect_job_info_start_visit">Iniciar visita</string>
     <string name="connect_job_info_download_delivery">Baixar entrega</string>
     <string name="connect_job_info_download">Download</string>
