--- a/app/res/values-ti/strings.xml
+++ b/app/res/values-ti/strings.xml
@@ -430,6 +430,8 @@
     <string name="connect_verify_phone_label">ብ %s ዝውዳእ መልአኽቲ ( SMS ) ክንሰደልኩም ፈቲንና።</string>
     <string name="connect_verify_phone_label_secondary">ኣብ ካልኣይ ደረጃ ቁፅሪ ተሌፎንኩም መልእኽቲ ( SMS ) ክንሰደልኩም ፈቲንና።</string>
     <string name="connect_verify_phone_resend">ኮድካ ኣይተቐበልካን ዲኻ? ዳግማይ ስደድ</string>
+    <string name="connect_verify_phone_error">ኮድ ኤስኤምኤስ ኣብ ምርግጋጽ ጌጋ</string>
+    <string name="connect_verify_phone_resend_code">ዳግማይ ምልኣኽ ኮድ</string>
     <string name="connect_verify_phone_resend_wait">ኮድካ ኣይተቐበልካን ዲኻ? ኣብ %d s ዳግማይ ስደድ</string>
     <string name="connect_verify_phone_change">ቁፅሪ ተሌፎን ቐይር።</string>
     <string name="connect_verify_phone_verify">ኮድ ኣረጋግፅ።</string>
@@ -438,6 +440,7 @@
     <string name="connect_no_jobs">ኣብ ዝኾነ ንጡፍ ዕድላት ኣይተዓደምኩምን። በይዛኹም ፀኒሕኹም ተመለሱ።</string>
     <string name="connect_job_intro_title">ዕድል</string>
     <string name="connect_job_none_available">ኣብዚ ኸዚ እዋን ዝረኽብዎ ዕድላት የለዉን።</string>
+    <string name="connect_job_learn_details">ዝርዝር ትምህርቲ</string>
     <string name="connect_job_you_will_learn">እዞም ዝስዕቡ ናይ ትምህርቲ ሞጁላት መሊእካ ምስክር ወረቐት ውሰድ</string>
     <string name="connect_job_no_learning_required">ትምህርቲ ኣየድልን።</string>
     <string name="connect_job_go_to_learn_app">ናብ Learn App ኪድ</string>
@@ -527,6 +530,9 @@
     <string name="connect_job_info_days">%d መዓልታት ንምዝዛም</string>
     <string name="connect_job_info_max_visit">ዝለዓለ ምጉብናይ ኣብ መዓልቲ %መ</string>
     <string name="connect_job_info_visit_charge">ንምጉብናይ ክሳብ %s ኣታዊ ምርካብ</string>
+    <string name="connect_job_info_per_visit">ኣብ ነፍሲ ወከፍ ምብጻሕ</string>
+    <string name="connect_job_info_delivery_hours">ሰዓታት ምብጻሕ</string>
+    <string name="connect_job_info_view_more">ተወሳኺ ርአ</string>
     <string name="connect_job_info_start_visit">ምብጻሕ (ምጉብንይ) ጀምር</string>
     <string name="connect_job_info_download_delivery">ዳውንሎድ ምብፃሕ</string>
     <string name="connect_job_info_download">ዳውንሎድ</string>
