--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -582,6 +582,8 @@
     <string name="connect_verify_phone_label_alternate">Almost there! Please enter the code sent via SMS to your alternate phone%s.</string>
     <string name="connect_verify_phone_label_deactivate">In order to deactivate your account, please enter the code sent by SMS to your primary phone number.</string>
     <string name="connect_verify_phone_resend">Didn\'t receive your code? Resend</string>
+    <string name="connect_verify_phone_error">Error verifying SMS code</string>
+    <string name="connect_verify_phone_resend_code">Resend Code</string>
 
     <string name="connect_verify_phone_resend_wait">Didn\'t receive your code? Resend in %d s</string>
     <string name="connect_verify_phone_change">Change</string>
@@ -618,6 +620,7 @@
     <string name="connect_job_claimed">Jobs In Delivery</string>
     <string name="connect_job_ended">Ended Jobs</string>
     <string name="connect_job_completed">Ended %s</string>
+    <string name="connect_job_learn_details">Learn Details</string>
     <string name="connect_job_you_will_learn">Complete the following learn modules and earn a certificate</string>
     <string name="connect_job_start_training">Start Training for this Job</string>
     <string name="connect_job_no_learning_required">No learning required</string>
@@ -835,6 +838,9 @@
     <string name="connect_job_info_days">%d Days to complete</string>
     <string name="connect_job_info_max_visit">Maximum visits per day %d</string>
     <string name="connect_job_info_visit_charge">Earn up to %s for visit</string>
+    <string name="connect_job_info_per_visit">per visit</string>
+    <string name="connect_job_info_delivery_hours">Delivery Hours</string>
+    <string name="connect_job_info_view_more">View More</string>
     <string name="connect_job_info_start_visit">Start Visit</string>
     <string name="connect_job_info_download_delivery">Download Delivery </string>
     <string name="connect_job_info_download">Download</string>
