--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -551,7 +551,7 @@
     <string name="connect_progress">Progresso</string>
     <string name="connect_payment">Pagamento</string>
     <string name="connect_delivery_progress_description">Você não concluiu nenhuma lição. Comece a aprender para ganhar seu certificado.</string>
-    <string name="connect_click_to_sync_progress">Clique para sincronizar o progresso</string>
+    <string name="connect_click_to_sync_progress">Sincronizar o progresso</string>
     <string name="connect_visit_type_title">%s Visitas</string>
     <string name="connect_payment_received">Recebida</string>
     <string name="connect_payment_transferred">Transferido</string>
