Added notification handling for messaging (storage and click-actions).

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -560,6 +560,12 @@
     <string name="connect_messaging_channel_consent_accept">Accept</string>
     <string name="connect_messaging_channel_consent_decline">Decline</string>
 
+    <string name="connect_messaging_message_notification_title">New Message</string>
+    <string name="connect_messaging_message_notification_message">You received a new message, press here to view.</string>
+    <string name="connect_messaging_channel_notification_title">New Channel</string>
+    <string name="connect_messaging_channel_notification_message">A new messaging channel is available, press here to view</string>
+
+
     <string name="connect_last_update">Updated: %s</string>
     <string name="connect_title">Connect</string>
     <string name="connect_no_jobs">You have not been invited to any active opportunities. Please come back later.</string>
