--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -153,6 +153,11 @@
     <string name="permission_commcare_logout_label">Allow Auto CommCare Logout</string>
     <string name="permission_commcare_logout_description">Allows this app to logout a user from CommmCare App</string>
 
+    <string name="permission_read_nfc_data_label">Read NFC Data</string>
+    <string name="permission_write_nfc_data_label">Write NFC Data</string>
+
+    <string name="permission_group_internal_action_label">Permission group for CommCare Internal Actions</string>
+
     <string name="title_activity_report_problem">ReportProblemActivity</string>
     <string name="title_activity_comm_care_verification">CommCareVerificationActivity</string>
     <string name="panes">one</string>
