Add permission to app updates to the latest version receiver

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -159,6 +159,8 @@
     <string name="permission_group_internal_action_label">Permission group for CommCare Internal Actions</string>
 
     <string name="permission_draw_boundary_area_label">Draw boundary area</string>
+    <string name="permission_update_to_latest_build_label">Allow App Update to the latest version</string>
+    <string name="permission_update_to_latest_build_description">Makes it possible to update an app to the latest version even if it has not been released</string>
 
     <string name="title_activity_report_problem">ReportProblemActivity</string>
     <string name="title_activity_comm_care_verification">CommCareVerificationActivity</string>
