--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -153,12 +153,10 @@
     <string name="permission_commcare_logout_label">Allow Auto CommCare Logout</string>
     <string name="permission_commcare_logout_description">Allows this app to logout a user from CommmCare App</string>
 
-    <string name="permission_read_nfc_data_label">Read NFC Data</string>
-    <string name="permission_write_nfc_data_label">Write NFC Data</string>
+    <string name="permission_protect_falsely_exposed_components_label">Protect falsely exposed components</string>
+    <string name="permission_protect_falsely_exposed_components_description">Due to implicit intent constrains, certain intent-aware components are now exposed, this permission is to prevent abusive use by external apps</string>
 
     <string name="permission_group_internal_action_label">Permission group for CommCare Internal Actions</string>
-    <string name="permission_draw_boundary_area_label">Draw boundary area</string>
-    <string name="permission_print_label">Print documents</string>
     <string name="permission_update_to_latest_build_label">Allow App Update to the latest version</string>
     <string name="permission_update_to_latest_build_description">Makes it possible to update an app to the latest version even if it has not been released</string>
 
