--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -153,8 +153,8 @@
     <string name="permission_commcare_logout_label">Allow Auto CommCare Logout</string>
     <string name="permission_commcare_logout_description">Allows this app to logout a user from CommmCare App</string>
 
-    <string name="permission_protect_falsely_exposed_components_label">Protect falsely exposed components</string>
-    <string name="permission_protect_falsely_exposed_components_description">Due to implicit intent constrains, certain intent-aware components are now exposed, this permission is to prevent abusive use by external apps</string>
+    <string name="permission_protect_falsely_exposed_components_label">Protect internal components</string>
+    <string name="permission_protect_falsely_exposed_components_description">Restricts external apps from accessing internal components</string>
 
     <string name="permission_group_internal_action_label">Permission group for CommCare Internal Actions</string>
 
