--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -555,6 +555,7 @@
 
     <string name="connect_verify_phone_verify">Verify code</string>
 
+    <string name="connect_messaging_title">Messaging</string>
     <string name="connect_messaging_channel_consent_title">Consent to channel</string>
     <string name="connect_messaging_channel_consent_description">Do you agree to open a messaging thread on this channel?</string>
     <string name="connect_messaging_channel_consent_accept">Accept</string>
