--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -457,8 +457,8 @@
     <string name="app_with_id_not_found">Required CommCare App is not installed on device</string>
     <string name="audio_recording_notification">Audio Recording Notification</string>
     <string name="entity_list_initializing" cc:translatable="true">Initializing list…</string>
-    <string name="entity_list_processing" cc:translatable="true">Processing %1s out of %2s</string>
+    <string name="entity_list_processing" cc:translatable="true">Processing cases: %s</string>
     <string name="entity_list_loading_cache" cc:translatable="true">Loading Cache…</string>
-    <string name="entity_list_calculating" cc:translatable="true">Calculating %1s out of %2s</string>
+    <string name="entity_list_calculating" cc:translatable="true">Calculating cases %s</string>
     <string name="entity_list_finalizing" cc:translatable="true">Finalizing list…</string>
 </resources>
