--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -785,6 +785,7 @@
     <string name="connect_job_tile_daily_visits">Daily Visits</string>
     <string name="connect_appbar_title_app_lock">App Lock</string>
     <string name="connect_appbar_title_password_verification">Password Verification</string>
+    <string name="connect_hq_invitation_accept_error">There was an error accepting the invitation, please contact support.</string>
 
     <string name="connect_db_corrupt">A problem occurred with the database, please recover your account.</string>
 </resources>
